[tool.poetry]
name = "wikiscraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
wikipedia = "^1.4.0"
flask = "^1.1.2"
"discord.py" = "^1.6.0"
discord = "^1.0.1"
replit = "^2.0.0"
Wikipedia-API = "^0.5.4"
owotext = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
